--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "lint:fix": "eslint --ext .vue,.ts --fix"
   },
   "devDependencies": {
+    "@antfu/eslint-config-vue": "^0.43.1",
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@quasar/extras": "^1.16.8",
+    "@squoosh/lib": "^0.5.3",
     "eslint": "^8.54.0",
     "nuxt": "^3.8.2",
+    "nuxt-quasar-ui": "^2.0.6",
+    "quasar": "^2.14.0",
     "sass": "^1.69.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
